--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,9 +25,10 @@
     background-color: var(--color-primary);
 }
 
-.menu-btn {
+.main-btn {
     @apply rounded-3xl p-5 text-2xl font-light bg-white transition duration-300 ease-in-out;
 }
-.menu-btn:hover {
+
+.main-btn:hover {
     background-color: var(--color-primary-light);
 }
