--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -92,5 +92,7 @@
 }
 
 .question-counter {
-    @apply text-sm font-medium text-indigo-600 uppercase mb-1
+    @apply text-2xl w-fit h-fit p-2 rounded-2xl shadow-2xl border-2;
+    background-color: var(--color-background-app);
+    color: var(--color-text-dark);
 }
