--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,7 +18,9 @@
 
 @layer base {
     h1 {
-        @apply text-5xl font-extrabold bg-white rounded-2xl p-3;
+        @apply text-5xl font-extrabold rounded-2xl p-3;
+        background-color: var(--color-background-app);
+        color: var(--color-text-dark);
     }
 }
 
@@ -56,7 +58,8 @@
 }
 
 .main-input {
-    @apply bg-white p-5 rounded-3xl;
+    @apply p-5 rounded-3xl;
+    background-color: var(--color-background-app);
 }
 
 .question-card {
@@ -88,11 +91,13 @@
 }
 
 .question {
-    @apply text-xl font-bold text-gray-900 leading-normal
+    @apply text-xl font-bold leading-normal;
+    color: var(--color-text-dark)
 }
 
 .question-counter {
-    @apply text-2xl w-fit h-fit p-2 rounded-2xl shadow-2xl border-2;
+    @apply text-2xl w-fit h-fit p-2 rounded-2xl border-3;
     background-color: var(--color-background-app);
-    color: var(--color-text-dark);
+    color: var(--color-text-medium);
+    border-color: var(--color-border-subtle);
 }
