--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -83,6 +83,16 @@
     color: var(--color-text-light)
 }
 
+.exercises-empty-container {
+    @apply flex flex-col items-center justify-center h-full mt-20;
+    color: var(--color-text-medium)
+}
+
+.exercises-empty-icon {
+    @apply w-40 h-40 mb-4;
+    color: var(--color-text-medium)
+}
+
 .exercises-bottom {
     @apply flex w-screen fixed bottom-0 left-0 h-[10%] drop-shadow-2xl justify-center items-center z-10;
 }
