--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -72,7 +72,7 @@
 }
 
 .header-title {
-    @apply absolute left-1/2 -translate-x-1/2 text-3xl font-bold text-white;
+    @apply absolute left-1/2 -translate-x-1/2 text-5xl font-bold text-white;
 }
 
 .left-icon {
@@ -84,7 +84,7 @@
 }
 
 .exercises-empty-container {
-    @apply flex flex-col items-center justify-center h-full mt-20;
+    @apply flex flex-col items-center justify-center h-full;
     color: var(--color-text-medium)
 }
 
